add code package

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .idea
+/Code/code.egg-info/dependency_links.txt
+/Code/code.egg-info/PKG-INFO
+/Code/code.egg-info/SOURCES.txt
+/Code/code.egg-info/top_level.txt
