add logs and generated results to .gitignore remove old and add new TODOS RobocasaLLM: fix logging eval error when log file was empty change dimensions and label rotations on the plot return added image when adding images to message add stop function to control functions add scene diffs to scene_description.py add tests add low-level functions to utils.py robocasa: fix get_vision_data error that corrupted every image except for the first one Code: add render_pandaomron.py as an attempt to get isometric rendering of the pandaormron reduce batch size remove some auto eval configs

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /Code/code.egg-info/top_level.txt
 /Code/LiteLLM/API_KEY
 /Code/LiteLLM/Logs/
+/Code/LiteLLM/results_raw.csv
+/Code/LiteLLM/results.csv
+/Code/LiteLLM/plot1_legacy.png
+/Code/LiteLLM/plot1.png
+/Code/LiteLLM/correct_behavior.log
+/Code/pandaomron_clean.xml
